modify routes of used vacation(#7923)

--- a/app/views/used_vacations/_form.html.slim
+++ b/app/views/used_vacations/_form.html.slim
@@ -6,7 +6,7 @@
 
 h2= t("common.title.#{form_type}")
 
-= form_for [user, vacation, used_vacation] do |f|
+= form_for [vacation, used_vacation] do |f|
   = f.error_messages
   .box
     p
