--- a/app/views/commutes/_form.html.slim
+++ b/app/views/commutes/_form.html.slim
@@ -15,4 +15,4 @@ h2= t("common.title.#{form_type}")
     p
     = render 'shared/attachments/form', label: t("commutes.#{form_type}.picture")
     p
-      = f.submit
+      = f.submit t("commutes.#{form_type}.submit")
