--- a/app/views/hrinfos/new.html.erb
+++ b/app/views/hrinfos/new.html.erb
@@ -13,7 +13,7 @@
   </p>
   <p>
     <%= f.label :companyno, Hrinfo.human_attribute_name('companyno') %>
-    <%= f.text_field :companyno %>
+    <%= f.text_field :companyno, value: Hrinfo.count %>
   </p>
   <p>
     <%= f.label :lastname, Hrinfo.human_attribute_name('lastname') %>
