--- a/app/views/hrinfos/show.html.erb
+++ b/app/views/hrinfos/show.html.erb
@@ -5,7 +5,7 @@
   <% end %>
   <% if @user.ingroup?("admin") || @hrinfo.user == @user %>
     <%= link_to t('payments.show.link'), payment_path(@hrinfo.user) %> |
-    <%= link_to t('vacations.show.link'), vacation_path(@hrinfo.user) %> |
+    <%= link_to t('vacations.show.link'), [@hrinfo.user, :vacations] %> |
     <%= link_to t('common.title.edit'), edit_hrinfo_path(@hrinfo) %> |
   <% end %>
   <%= link_to t('common.title.back'), hrinfos_path %>
