--- a/app/views/commutes/_form.html.slim
+++ b/app/views/commutes/_form.html.slim
@@ -3,15 +3,14 @@
 #show_command
   = link_to t('common.title.back'), commute_path(user)
 
-h2= t("common.title.#{form_type}")
+h2= t("commutes.#{form_type}.title")
 
-= form_for [type, user, commute], html: {multipart: true} do |f|
+= form_for [type, user, commute], html: {multipart: true, class: "tabular"} do |f|
   = f.error_messages
   .box
     p
       = f.label type
-      p= DateTime.now.strftime("%Y년 %m월 %d일 %H시 %M분")
+      = DateTime.now.strftime("%Y-%m-%d %H:%M")
     p
-    = render 'shared/attachments/form', label: t("commutes.#{form_type}.picture")
-    p
-      = f.submit t("commutes.#{form_type}.submit")
+      = render 'shared/attachments/form', label: t("commutes.#{form_type}.picture")
+  = f.submit t("commutes.#{form_type}.submit")
