--- a/app/views/commutes/detail.html.slim
+++ b/app/views/commutes/detail.html.slim
@@ -1,21 +1,20 @@
-- title t('.title')
+- title t('commutes.title')
 
-h2 출퇴근 상세정보
 #show_command
   = link_to t('common.title.list'), commute_path(user)
+h2 =t('.title')
 
 .box
   #descr
-    table
+    table cellspacing="5" cellpadding="5"
       tr
-        th 출근
-        td= commute.go.strftime("%Y-%m-%d %H-%M")
+        th =t('commutes.arrive_at_work')+":"
+        td= commute.go.strftime("%Y-%m-%d %H:%M")
       tr
-        th 퇴근
+        th =t('commutes.leave_work')+":"
         td
           - unless commute.leave
             = link_to t('commutes.leave.link'), [:leave, user, commute]
           - else
-            = commute.leave.strftime("%Y-%m-%d %H-%M")
+            = commute.leave.strftime("%Y-%m-%d %H:%M")
   = render :partial => "shared/show_attachment", :object => commute
-div style="clear: both;"
