applying bank transaction(#8059)

--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -1,3 +1,9 @@
+
+#show_command
+  = link_to "입출금 내역 올리기", [:new, :bank_transaction]
+  = " | "
+  = link_to t('common.title.back'), :root
+
 - unless bank_transactions.empty?
   table
     tr
