apply bank transaction(with bank account)

--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -1,6 +1,6 @@
 
 #show_command
-  = link_to "입출금 내역 올리기", [:new, :bank_transaction]
+  = link_to "입출금 내역 올리기", [:new, bank_account, :bank_transaction]
   = " | "
   = link_to t('common.title.back'), :root
 
