--- a/app/views/bank_transactions/_form.html.slim
+++ b/app/views/bank_transactions/_form.html.slim
@@ -5,7 +5,7 @@
 
 h2= t("common.title.#{form_type}")
 
-= form_tag bank_transaction, multipart: true do
+= form_tag [bank_account, bank_transaction], multipart: true do
   .box
     p
       = label_tag :bank_transaction, :file
