--- a/app/views/bank_transactions/_form.html.slim
+++ b/app/views/bank_transactions/_form.html.slim
@@ -1,14 +1,32 @@
 - form_type = if bank_transaction.new_record? then 'new' else 'edit' end
 
 #show_command
-  = link_to t('common.title.back'), bank_transactions_path
+  = link_to t('common.title.back'), [bank_account, :bank_transactions]
 
 h2= t("common.title.#{form_type}")
 
-= form_tag [bank_account, bank_transaction], multipart: true do
+= form_for [bank_account, bank_transaction] do |f|
   .box
     p
-      = label_tag :bank_transaction, :file
-      = file_field :bank_transaction, :file
+      = f.label :transacted_at
+      = f.datetime_select :transacted_at, :order => [:year, :month, :day, :hour, :minute]
     p
-      = submit_tag
+      = f.label :transaction_type
+      = f.text_field :transaction_type
+    p
+      = f.label :in
+      = f.text_field :in
+    p
+      = f.label :out
+      = f.text_field :out
+    p
+      = f.label :note
+      = f.text_area :note
+    p
+      = f.label :remain
+      = f.text_field :remain
+    p
+      = f.label :branchname
+      = f.text_field :branchname
+    p
+      = f.submit
