--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -1,34 +1,36 @@
 
 #show_command
-  = link_to "입출금 내역 올리기", [:new, bank_account, :bank_transaction]
+  = link_to t('bank_transactions.new.link'), [:new, bank_account, :bank_transaction]
   = " | "
-  = link_to "엑셀 파일로 올리기 올리기", [:excel, bank_account, :bank_transactions]
+  = link_to t('bank_transactions.excel.link'), [:excel, bank_account, :bank_transactions]
   = " | "
-  = link_to t('common.title.back'), :root
+  = link_to t('common.title.back'), :bank_accounts
 
-- unless bank_transactions.empty?
-  table
-    tr
-      th 거래일자
-      th 적요
-      th 입금액
-      th 출금액
-      th 내용
-      th 잔액
-      th 거래처명
-      th 메뉴
-    - bank_transactions.each do |transaction|
+.box
+  h3= "#{bank_account.name}: #{bank_account.number}"
+  - unless bank_transactions.empty?
+    table
       tr
-        td= transaction.transacted_at.strftime("%Y-%m-%d %H.%M")
-        td= transaction.transaction_type
-        td= number_to_currency transaction.in
-        td= number_to_currency transaction.out
-        td= transaction.note
-        td= number_to_currency transaction.remain
-        td= transaction.branchname
-        td
-          = link_to t('common.link.edit'), [:edit, bank_account, transaction]
-          = " | "
-          = link_to t('common.link.destroy'), [bank_account, transaction], :method => :delete, :confirm => "Are you sure?"
-- else
-  h4= t('.empty')
+        th= BankTransaction.human_attribute_name(:transacted_at)
+        th= BankTransaction.human_attribute_name(:transaction_type)
+        th= BankTransaction.human_attribute_name(:in)
+        th= BankTransaction.human_attribute_name(:out)
+        th= BankTransaction.human_attribute_name(:note)
+        th= BankTransaction.human_attribute_name(:remain)
+        th= BankTransaction.human_attribute_name(:branchname)
+        th= t('common.menu')
+      - bank_transactions.each do |transaction|
+        tr
+          td= transaction.transacted_at.strftime("%Y-%m-%d %H.%M")
+          td= transaction.transaction_type
+          td= number_to_currency transaction.in
+          td= number_to_currency transaction.out
+          td= transaction.note
+          td= number_to_currency transaction.remain
+          td= transaction.branchname
+          td
+            = link_to t('common.link.edit'), [:edit, bank_account, transaction]
+            = " | "
+            = link_to t('common.link.destroy'), [bank_account, transaction], :method => :delete, :confirm => "Are you sure?"
+  - else
+    h4= t('.empty')
