--- a/app/views/bank_accounts/index.html.slim
+++ b/app/views/bank_accounts/index.html.slim
@@ -20,6 +20,8 @@
           td
             = link_to t('bank_transactions.index.title'), [account, :bank_transactions]
             = " | "
+            = link_to t('bank_transfers.index.title'), [account, :bank_transfers]
+            = " | "
             = link_to t('common.link.edit'), [:edit, account]
             = " | "
             = link_to t('common.link.destroy'), account, :method => :delete, :confirm => "Are you sure?"
