--- a/app/views/vacations/_form.html.slim
+++ b/app/views/vacations/_form.html.slim
@@ -1,10 +1,7 @@
-- form_type = if vacation.new_record? then 'new' else 'edit' end
-- title t("vacations.#{form_type}.title")
-
 #show_command
   = link_to t('common.title.back'), [user, :vacations]
 
-h2= t("common.title.#{form_type}")
+h2= t("common.title.#{action_name}")
 
 = form_for [user, vacation], html: {class: "tabular"} do |f|
   = f.error_messages
@@ -18,5 +15,5 @@ h2= t("common.title.#{form_type}")
     p
       = f.label :period
       = f.text_field :period
-  p
-    = f.submit
+    p
+      = f.submit
