--- a/app/views/bank_transactions/excel.html.slim
+++ b/app/views/bank_transactions/excel.html.slim
@@ -1,9 +1,7 @@
-- form_type = if bank_transaction.new_record? then 'new' else 'edit' end
-
 #show_command
   = link_to t('common.title.back'), [bank_account, :bank_transactions]
 
-h2= t("common.title.#{form_type}")
+h2= t("common.title.#{action_name}")
 
 = form_tag [:excel, bank_account, bank_transaction], multipart: true do
   .box
