--- a/app/views/business_clients/_form.html.erb
+++ b/app/views/business_clients/_form.html.erb
@@ -1,12 +1,8 @@
-<% form_type = if @business_client.new_record? then 'new' else 'edit' end %>
-
-<% title t("business_clients.#{form_type}.title") %>
-
 <div id="show_command">
   <%= link_to t('common.title.back'), :business_clients %>
 </div>
 
-<h2><%= t("common.title.#{form_type}") %></h2>
+<h2><%= t("common.title.#{action_name}") %></h2>
 <%= form_for @business_client, html: {multipart: true} do |f| %>
     <%= f.error_messages %>
     <div class="box">
