--- a/app/views/bank_transfers/_form.html.slim
+++ b/app/views/bank_transfers/_form.html.slim
@@ -18,42 +18,42 @@ h2= t("common.title.#{form_type}")
       = f.text_field :result
     p
       = f.label :out_bank_account
-      = f.text_field :result
+      = f.text_field :out_bank_account
     p
       = f.label :in_bank_name
-      = f.text_field :result
+      = f.text_field :in_bank_name
     p
       = f.label :in_bank_account
-      = f.text_field :result
+      = f.text_field :in_bank_account
     p
       = f.label :money
-      = f.text_field :result
+      = f.text_field :money
     p
       = f.label :transfer_fee
-      = f.text_field :result
+      = f.text_field :transfer_fee
     p
       = f.label :error_money
-      = f.text_field :result
+      = f.text_field :error_money
     p
       = f.label :registered_at
       = f.datetime_select :registered_at, :order => [:year, :month, :day, :hour, :minute]
     p
       = f.label :error_code
-      = f.text_field :result
+      = f.text_field :error_code
     p
       = f.label :transfer_note
-      = f.text_field :result
+      = f.text_field :transfer_note
     p
       = f.label :incode
-      = f.text_field :result
+      = f.text_field :incode
     p
       = f.label :out_account_note
-      = f.text_field :result
+      = f.text_field :out_account_note
     p
       = f.label :in_account_note
-      = f.text_field :result
+      = f.text_field :in_account_note
     p
       = f.label :in_person_name
-      = f.text_field :result
+      = f.text_field :in_person_name
     p
       = f.submit
