--- a/app/views/bank_transfers/excel.html.slim
+++ b/app/views/bank_transfers/excel.html.slim
@@ -1,7 +1,10 @@
-- form_type = if bank_transfer.new_record? then 'new' else 'edit' end
-
 #show_command
   = link_to t('common.title.back'), [bank_account, :bank_transfers]
 
-h2= t("common.title.#{form_type}")
-h3 아직 준비되지 않았습니다
+= form_tag [:excel, bank_account, bank_transfer], multipart: true do
+  .box
+    p
+      = label_tag :file, t('.file')
+      = file_field :upload, :file
+    p
+      = submit_tag t('.submit')
