--- a/app/views/bank_transactions/excel.html.slim
+++ b/app/views/bank_transactions/excel.html.slim
@@ -3,10 +3,10 @@
 
 h2= t("common.title.#{action_name}")
 
-= form_tag [:excel, bank_account, bank_transaction], multipart: true do
+= form_tag [:excel, bank_account, bank_transaction], html: {multipart: true, class: "tabular"} do
   .box
     p
       = label_tag :file, t('.file')
       = file_field :bank_transaction, :file
-    p
-      = submit_tag t('.submit')
+  p
+    = submit_tag t('.submit')
