--- a/app/views/bank_accounts/index.html.slim
+++ b/app/views/bank_accounts/index.html.slim
@@ -3,27 +3,27 @@
   = link_to "은행계좌 만들기", [:new, :bank_account]
   = " | "
   = link_to t('common.title.back'), :root
+h2 ..
 
-.box
-  - unless bank_accounts.empty?
-    table
-      tr
-        th= BankAccount.human_attribute_name(:name)
-        th= BankAccount.human_attribute_name(:number)
-        th= BankAccount.human_attribute_name(:note)
-        th= t('common.menu')
-      - bank_accounts.each do |account|
-        tr
-          td= account.name
-          td= account.number
-          td= account.note
-          td
-            = link_to t('bank_transactions.index.title'), [account, :bank_transactions]
-            = " | "
-            = link_to t('bank_transfers.index.title'), [account, :bank_transfers]
-            = " | "
-            = link_to t('common.link.edit'), [:edit, account]
-            = " | "
-            = link_to t('common.link.destroy'), account, :method => :delete, :confirm => "Are you sure?"
-  - else
-    h4= t('.empty')
+- unless bank_accounts.empty?
+  table#list-table
+    tr
+      th= BankAccount.human_attribute_name(:name)
+      th= BankAccount.human_attribute_name(:number)
+      th= BankAccount.human_attribute_name(:note)
+      th= t('common.menu')
+    - bank_accounts.each do |account|
+      tr.selectable
+        td= account.name
+        td= account.number
+        td= account.note
+        td
+          = link_to t('bank_transactions.index.title'), [account, :bank_transactions]
+          = " | "
+          = link_to t('bank_transfers.index.title'), [account, :bank_transfers]
+          = " | "
+          = link_to t('common.link.edit'), [:edit, account]
+          = " | "
+          = link_to t('common.link.destroy'), account, :method => :delete, :confirm => "Are you sure?"
+- else
+  h4= t('.empty')
