--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -6,31 +6,34 @@
   = " | "
   = link_to t('common.title.back'), :bank_accounts
 
-.box
-  h3= "#{bank_account.name}: #{bank_account.number}"
-  - unless bank_transactions.empty?
-    table
-      tr
-        th= BankTransaction.human_attribute_name(:transacted_at)
-        th= BankTransaction.human_attribute_name(:transaction_type)
-        th= BankTransaction.human_attribute_name(:in)
-        th= BankTransaction.human_attribute_name(:out)
-        th= BankTransaction.human_attribute_name(:note)
-        th= BankTransaction.human_attribute_name(:remain)
-        th= BankTransaction.human_attribute_name(:branchname)
-        th= t('common.menu')
-      - bank_transactions.each do |transaction|
-        tr
-          td= transaction.transacted_at.strftime("%Y-%m-%d %H.%M")
-          td= transaction.transaction_type
-          td= number_to_currency transaction.in
-          td= number_to_currency transaction.out
-          td= transaction.note
-          td= number_to_currency transaction.remain
-          td= transaction.branchname
-          td
-            = link_to t('common.link.edit'), [:edit, bank_account, transaction]
-            = " | "
-            = link_to t('common.link.destroy'), [bank_account, transaction], :method => :delete, :confirm => "Are you sure?"
-  - else
-    h4= t('.empty')
+h2 #{bank_account.name}: #{bank_account.number}
+
+- unless bank_transactions.empty?
+  table#list-table
+    tr
+      th= BankTransaction.human_attribute_name(:transacted_at)
+      th= BankTransaction.human_attribute_name(:transaction_type)
+      th= BankTransaction.human_attribute_name(:in)
+      th= BankTransaction.human_attribute_name(:out)
+      th= BankTransaction.human_attribute_name(:note)
+      th= BankTransaction.human_attribute_name(:remain)
+      th= BankTransaction.human_attribute_name(:branchname)
+      th= t('common.menu')
+    - bank_transactions.each do |transaction|
+      tr.selectable
+        td= transaction.transacted_at.strftime("%Y-%m-%d %H.%M")
+        td= transaction.transaction_type
+        td class="numrow"
+					= number_to_currency transaction.in
+        td class="numrow"
+					= number_to_currency transaction.out
+        td= transaction.note
+        td class="numrow"
+					= number_to_currency transaction.remain
+        td= transaction.branchname
+        td
+          = link_to t('common.link.edit'), [:edit, bank_account, transaction]
+          = " | "
+          = link_to t('common.link.destroy'), [bank_account, transaction], :method => :delete, :confirm => "Are you sure?"
+- else
+  h4= t('.empty')
