--- a/app/views/bank_transfers/excel.html.slim
+++ b/app/views/bank_transfers/excel.html.slim
@@ -1,10 +1,11 @@
 #show_command
   = link_to t('common.title.back'), [bank_account, :bank_transfers]
+h2 ..
 
-= form_tag [:excel, bank_account, bank_transfer], multipart: true do
+= form_tag [:excel, bank_account, bank_transfer], html: {multipart: true, class: "tabular"} do
   .box
     p
       = label_tag :file, t('.file')
       = file_field :upload, :file
-    p
-      = submit_tag t('.submit')
+  p
+    = submit_tag t('.submit')
