--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -29,6 +29,8 @@
           td= number_to_currency transaction.remain
           td= transaction.branchname
           td
+            = link_to t('bank_transactions.show.to_bank_transfer'), bank_account_bank_transfers_path(bank_account, from: transaction)
+            = " | "
             = link_to t('common.link.edit'), [:edit, bank_account, transaction]
             = " | "
             = link_to t('common.link.destroy'), [bank_account, transaction], :method => :delete, :confirm => "Are you sure?"
