--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -20,7 +20,7 @@ h2 #{bank_account.name}: #{bank_account.number}
       th= BankTransaction.human_attribute_name(:branchname)
       th= t('common.menu')
     - bank_transactions.each do |transaction|
-      tr.selectable
+      = content_tag_for(:tr, transaction, class: transaction.related?(bank_transfer) ? 'selectable related' : 'selectable') do
         td= transaction.transacted_at.strftime("%Y-%m-%d %H.%M")
         td= transaction.transaction_type
         td class="numrow"
@@ -39,3 +39,8 @@ h2 #{bank_account.name}: #{bank_account.number}
           = link_to t('common.link.destroy'), [bank_account, transaction], :method => :delete, :confirm => "Are you sure?"
 - else
   h4= t('.empty')
+
+
+javascript:
+  var position = $('tr.related').position();
+  $(window).scrollTop(position.top);
