--- a/app/views/bank_transfers/excel.html.slim
+++ b/app/views/bank_transfers/excel.html.slim
@@ -2,7 +2,7 @@
   = link_to t('common.title.back'), [bank_account, :bank_transfers]
 h2 ..
 
-= form_tag [:excel, bank_account, bank_transfer], html: {multipart: true, class: "tabular"} do
+= form_tag [:excel, bank_account, bank_transfer], multipart: true, class: "tabular" do
   .box
     p
       = label_tag :file, t('.file')
