--- a/app/views/bank_transfers/index.html.slim
+++ b/app/views/bank_transfers/index.html.slim
@@ -49,6 +49,8 @@ h2 #{bank_account.name}: #{bank_account.number}
         /!td= transfer.in_account_note
         td= transfer.in_person_name
         td
+          = link_to t('bank_transfers.show.to_bank_transaction'), bank_account_bank_transactions_path(bank_account, from: transfer)
+          = " | "
           = link_to t('common.link.edit'), [:edit, bank_account, transfer]
           = " | "
           = link_to t('common.link.destroy'), [bank_account, transfer], :method => :delete, :confirm => "Are you sure?"
