change main menu design

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -295,8 +295,11 @@ td.money {
   text-align: right;
 }
 
+#mainmenu-table {
+	top: 80px;
+}
 #mainmenu {
-  display: block;
+  display: none;
   position: relative;
   margin-right: auto;
   margin-left: auto;
