--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,6 +2,63 @@
   <%= image_tag 'mint_logo.png' %>
 </div>
 
+<table align="center" border="0" cellspacing="5" cellpadding="5" id="menumenu-table" style="margin-top: 80px; font-size: 16px">
+	<tr >
+		<th style="text-align: center;"><%= t(".human_resources") %></th>
+		<th style="text-align: center;"><%= t(".finance") %></th>
+		<th style="text-align: center;"><%= t(".project") %></th>
+		<th style="text-align: center;"><%= t(".document") %></th>
+	</tr>
+	<tr>
+		<td style="text-align: left; text-valign: top;">
+			<ul>
+				<li><%= link_to t("hrinfos.index.title"), :controller => "hrinfos" %></li>
+	      <% if @user.permission.any? {|perm| perm.name == 'users'}  %>
+	          <li><%= link_to t("users.index.title"), :controller => "users" %></li>
+	      <% end %>
+	      <% if @user.ingroup?(:admin) %>
+	        <li><%= link_to t("commutes.index.title"), :commutes %></li>
+	      <% else %>
+	        <li><%= link_to t("commutes.index.title"), commute_path(@user) %></li>
+	      <% end %>
+      </ul>
+		</td>
+		<td style="text-align: left; text-valign: top;">
+			<ul>
+    		<% if @user.permission.any? {|perm| perm.name == 'pettycashes'}  %>
+		      <li><%= link_to t("pettycashes.index.title"), :controller => "pettycashes" %></li>
+		    <% end %>
+		    <% if @user.permission.any? {|perm| perm.name == 'cardbills'}  %>
+		      <li><%= link_to t("cardbills.index.title"), :controller => "cardbills" %></li>
+		    <% end %>
+		    <% if @user.permission.any? {|perm| perm.name == 'taxbills'}  %>
+		      <li><%= link_to t("taxbills.index.title"), :taxbills %></li>
+		    <% end %>
+		    <% if @user.permission.any? {|perm| perm.name == 'bank_accounts'}  %>
+		      <li><%= link_to t("bank_accounts.index.title"), :bank_accounts %></li>
+		    <% end %>
+	    </ul>
+		</td>
+		<td style="text-align: left; text-valign: top;">
+			<ul>
+	      <% if @user.permission.any? {|perm| perm.name == 'projects'}  %>
+	        <li><%= link_to t("projects.index.title"), :controller => "projects" %></li>
+	      <% end %>
+	    </ul>
+		</td>
+		<td style="text-align: left; text-valign: top;">
+			<ul>
+	      <li><%= link_to t("documents.index.title"), :controller => "documents" %></li>
+	      <% if @user.permission.any? {|perm| perm.name == 'namecards'}  %>
+	        <li><%= link_to t("namecards.index.title"), :controller => "namecards" %></li>
+	      <% end %>
+	      <% if @user.permission.any? {|perm| perm.name == 'business_clients'}  %>
+	        <li><%= link_to t("business_clients.index.title"), :business_clients %></li>
+	      <% end %>
+	    </ul>
+		</td>
+</table>
+
 <div id="mainmenu">
 <ul id="css3menu">
   <li class="topitem"><a href="#"><span><%= t(".human_resources") %></span></a>
