--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -31,9 +31,10 @@ h2 #{bank_account.name}: #{bank_account.number}
         td class="numrow"
           = number_to_currency transaction.remain
         td= transaction.branchname
-        td
-          = link_to t('bank_transactions.show.to_bank_transfer'), bank_account_bank_transfers_path(bank_account, from: transaction)
-          = " | "
+        td align="right"
+          - if transaction.in == 0
+            = link_to t('bank_transactions.show.to_bank_transfer'), bank_account_bank_transfers_path(bank_account, from: transaction)
+            = " | "
           = link_to t('common.link.edit'), [:edit, bank_account, transaction]
           = " | "
           = link_to t('common.link.destroy'), [bank_account, transaction], :method => :delete, :confirm => "Are you sure?"
@@ -43,4 +44,6 @@ h2 #{bank_account.name}: #{bank_account.number}
 
 javascript:
   var position = $('tr.related').position();
-  $(window).scrollTop(position.top);
+  $('html,body').animate({
+    scrollTop: position.top - 200
+  }, 500);
