--- a/app/views/card_used_sources/index.html.slim
+++ b/app/views/card_used_sources/index.html.slim
@@ -1,4 +1,3 @@
-
 #show_command
   = link_to t('card_used_sources.new.link'), [:new, creditcard, :card_used_source]
   = " | "
@@ -9,7 +8,7 @@
 h2= "#{creditcard.nickname}: #{creditcard.cardno}"
 
 - unless card_used_sources.empty?
-  table#list-table.long-table
+  table#list-table
     tr
       th= CardUsedSource.human_attribute_name(:card_no)
       th= CardUsedSource.human_attribute_name(:bank_account)
