--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -20,7 +20,7 @@ h2 #{bank_account.name}: #{bank_account.number}
       th= BankTransaction.human_attribute_name(:branchname)
       th= t('common.menu')
     - bank_transactions.each do |transaction|
-      = content_tag_for(:tr, transaction, class: transaction.related?(bank_transfer) ? 'selectable related' : 'selectable') do
+      tr.selectable
         td= transaction.transacted_at.strftime("%Y-%m-%d %H.%M")
         td= transaction.transaction_type
         td class="numrow"
@@ -32,9 +32,11 @@ h2 #{bank_account.name}: #{bank_account.number}
           = number_to_currency transaction.remain
         td= transaction.branchname
         td align="right"
-          - if transaction.in == 0
-            = link_to t('bank_transactions.show.to_bank_transfer'), bank_account_bank_transfers_path(bank_account, from: transaction)
+          - if transaction.transfer
+            = link_to t('bank_transactions.show.to_bank_transfer'), [bank_account, transaction.transfer]
             = " | "
+          = link_to t('common.link.show'), [bank_account, transaction]
+          = " | "
           = link_to t('common.link.edit'), [:edit, bank_account, transaction]
           = " | "
           = link_to t('common.link.destroy'), [bank_account, transaction], :method => :delete, :confirm => "Are you sure?"
@@ -43,10 +45,3 @@ h2 #{bank_account.name}: #{bank_account.number}
     = will_paginate bank_transactions
 - else
   h4= t('.empty')
-
-
-javascript:
-  var position = $('tr.related').position();
-  $('html,body').animate({
-    scrollTop: position.top - 200
-  }, 500);
