fix the bug #8062

--- a/app/views/card_approved_sources/_form.html.slim
+++ b/app/views/card_approved_sources/_form.html.slim
@@ -12,6 +12,9 @@ h2= t("common.title.#{action_name}")
       = f.label :approve_no
       = f.text_field :approve_no
     p
+      = f.label :card_no
+      = f.text_field :card_no
+    p
       = f.label :card_holder_name
       = f.text_field :card_holder_name
     p
