--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -21,7 +21,10 @@ h2 #{bank_account.name}: #{bank_account.number}
       th= t('common.menu')
     - bank_transactions.each do |transaction|
       tr.selectable
-        td= transaction.transacted_at.strftime("%Y-%m-%d %H.%M")
+        - if transaction.transacted_at
+          td= transaction.transacted_at.strftime("%Y-%m-%d %H.%M")
+        - else
+          td= ""
         td= transaction.transaction_type
         td class="numrow"
           = number_to_currency transaction.in
