should parse ibk bank's excel file

--- a/app/views/bank_transactions/_form.html.slim
+++ b/app/views/bank_transactions/_form.html.slim
@@ -26,5 +26,17 @@ h2= t("common.title.#{action_name}")
     p
       = f.label :branchname
       = f.text_field :branchname
+    p
+      = f.label :out_bank_account
+      = f.text_field :out_bank_account
+    p
+      = f.label :out_bank_name
+      = f.text_field :out_bank_name
+    p
+      = f.label :promissory_check_amount
+      = f.text_field :promissory_check_amount
+    p
+      = f.label :cms_code
+      = f.text_field :cms_code
   p
     = f.submit
