--- a/app/views/bank_transfers/_form.html.slim
+++ b/app/views/bank_transfers/_form.html.slim
@@ -55,5 +55,11 @@ h2= t("common.title.#{form_type}")
     p
       = f.label :in_person_name
       = f.text_field :in_person_name
+    p
+      = f.label :cms_code
+      = f.text_field :cms_code
+    p
+      = f.label :currency_code
+      = f.text_field :currency_code
   p
     = f.submit
