--- a/app/views/bank_transactions/excel.html.slim
+++ b/app/views/bank_transactions/excel.html.slim
@@ -4,12 +4,30 @@
 h2= t("common.title.#{action_name}")
 
 = form_tag [:excel, bank_account, bank_transaction], multipart: true, class: "tabular" do
+  = hidden_field_tag :previewed, params[:previewed]
+
+  - if @account
+    = hidden_field_tag :bank_account_id, @account.id
+
   .box
     p
       = label_tag :bank_type, t('.type')
       = select_tag :bank_type, options_for_select(BankTransaction::BANK_LIST)
-    p
-      = label_tag :file, t('.file')
-      = file_field :bank_transaction, :file
-    p
-      = submit_tag t('.submit')
+
+    - unless params[:upload]
+      p
+        = label_tag :file, t('.file')
+        = file_field :upload, :file
+      p
+        = submit_tag "미리보기"
+    - else
+      p
+        = label_tag :file, t('.file')
+        = text_field_tag :upload, params[:upload][:file].original_filename
+      p
+        = submit_tag t('.submit')
+
+br
+- if @account
+  h3 프리뷰
+  = render 'list', bank_transactions: @account.bank_transactions
