--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -9,40 +9,7 @@
 h2 #{bank_account.name}: #{bank_account.number}
 
 - unless bank_transactions.empty?
-  table#list-table
-    tr
-      th= BankTransaction.human_attribute_name(:transacted_at)
-      th= BankTransaction.human_attribute_name(:transaction_type)
-      th= BankTransaction.human_attribute_name(:in)
-      th= BankTransaction.human_attribute_name(:out)
-      th= BankTransaction.human_attribute_name(:note)
-      th= BankTransaction.human_attribute_name(:remain)
-      th= BankTransaction.human_attribute_name(:branchname)
-      th= t('common.menu')
-    - bank_transactions.each do |transaction|
-      tr.selectable
-        - if transaction.transacted_at
-          td= transaction.transacted_at.strftime("%Y-%m-%d %H.%M")
-        - else
-          td= ""
-        td= transaction.transaction_type
-        td class="numrow"
-          = number_to_currency transaction.in
-        td class="numrow"
-          = number_to_currency transaction.out
-        td= transaction.note
-        td class="numrow"
-          = number_to_currency transaction.remain
-        td= transaction.branchname
-        td align="right"
-          - if transaction.transfer
-            = link_to t('bank_transactions.show.to_bank_transfer'), [bank_account, transaction.transfer]
-            = " | "
-          = link_to t('common.link.show'), [bank_account, transaction]
-          = " | "
-          = link_to t('common.link.edit'), [:edit, bank_account, transaction]
-          = " | "
-          = link_to t('common.link.destroy'), [bank_account, transaction], :method => :delete, :confirm => "Are you sure?"
+  = render 'list'
   br
   center
     = will_paginate bank_transactions
