--- a/app/views/bank_transfers/excel.html.slim
+++ b/app/views/bank_transfers/excel.html.slim
@@ -3,12 +3,30 @@
 h2 ..
 
 = form_tag [:excel, bank_account, bank_transfer], multipart: true, class: "tabular" do
+  = hidden_field_tag :previewed, params[:previewed]
+
+  - if @account
+    = hidden_field_tag :bank_account_id, @account.id
+
   .box
     p
       = label_tag :bank_type, t('.type')
-      = select_tag :bank_type, options_for_select(BankTransfer::BANK_LIST)
-    p
-      = label_tag :file, t('.file')
-      = file_field :upload, :file
-    p
-      = submit_tag t('.submit')
+      = select_tag :bank_type, options_for_select(BankTransfer::BANK_LIST, params[:bank_type])
+
+    - unless params[:upload]
+      p
+        = label_tag :file, t('.file')
+        = file_field :upload, :file
+      p
+        = submit_tag "미리보기"
+    - else
+      p
+        = label_tag :file, t('.file')
+        = text_field_tag :upload, params[:upload][:file].original_filename
+      p
+        = submit_tag t('.submit')
+
+br
+- if @account
+  h3 프리뷰
+  = render 'list', bank_transfers: @account.bank_transfers
