--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -9,7 +9,7 @@
 h2 #{bank_account.name}: #{bank_account.number}
 
 - unless bank_transactions.empty?
-  = render 'list'
+  = render 'list', preview: false
   br
   center
     = will_paginate bank_transactions
