--- a/app/views/bank_transactions/_list.html.slim
+++ b/app/views/bank_transactions/_list.html.slim
@@ -7,7 +7,8 @@ table#list-table
     th= BankTransaction.human_attribute_name(:note)
     th= BankTransaction.human_attribute_name(:remain)
     th= BankTransaction.human_attribute_name(:branchname)
-    th= t('common.menu')
+    - unless @preview
+      th= t('common.menu')
   - bank_transactions.each do |transaction|
     tr.selectable
       - if transaction.transacted_at
@@ -23,12 +24,13 @@ table#list-table
       td class="numrow"
         = number_to_currency transaction.remain
       td= transaction.branchname
-      td align="right"
-        - if transaction.transfer
-          = link_to t('bank_transactions.show.to_bank_transfer'), [bank_account, transaction.transfer]
+      - unless @preview
+        td align="right"
+          - if transaction.transfer
+            = link_to t('bank_transactions.show.to_bank_transfer'), [bank_account, transaction.transfer]
+            = " | "
+          = link_to t('common.link.show'), [bank_account, transaction]
           = " | "
-        = link_to t('common.link.show'), [bank_account, transaction]
-        = " | "
-        = link_to t('common.link.edit'), [:edit, bank_account, transaction]
-        = " | "
-        = link_to t('common.link.destroy'), [bank_account, transaction], :method => :delete, :confirm => "Are you sure?"
+          = link_to t('common.link.edit'), [:edit, bank_account, transaction]
+          = " | "
+          = link_to t('common.link.destroy'), [bank_account, transaction], :method => :delete, :confirm => "Are you sure?"
